--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1692,3 +1692,18 @@ section,
 .starter-section {
   /* Add your styles here */
 }
+
+
+/* Misc. Sty;es
+
+*/
+
+.book-a-table-login {
+  color: var(--contrast-color);
+  background: var(--accent-color);
+  border: 0;
+  padding: 14px 40px;
+  margin: 1rem 0;
+  transition: 0.4s;
+  border-radius: 50px;
+}
