--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -65,7 +65,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#book-a-table">Book a Table</a>
+      <!-- <a class="btn-getstarted" href="index.html#book-a-table">Book a Table</a> -->
+      <button class="book-a-table-login" id="logoutButton">Logout</button>
 
     </div>
   </header>
@@ -76,7 +77,15 @@
 
         <h2>Manage Bookings</h2>
         <p>Welcome to the bookings management page!</p>
-        <button class="book-a-table-login" id="logoutButton">Logout</button>
+
+        <ul>
+          <% bookings.forEach((booking, i)=> { %>
+            <li>
+              <%= i+1 %> - <%= booking.BOOKING_NAME %>
+            </li>
+            <% }); %>
+        </ul>
+
       </div>
     </section>
   </main>
