--- a/views/index.ejs
+++ b/views/index.ejs
@@ -290,27 +290,32 @@
 
           <li class="nav-item">
             <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#menu-starters">
-              <h4>Starters</h4>
+              <h4>Dinner</h4>
+            </a>
+          </li><!-- End tab nav item -->
+          <li class="nav-item">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-desserts">
+              <h4>Desserts</h4>
             </a>
           </li><!-- End tab nav item -->
 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-breakfast">
               <h4>Breakfast</h4>
-            </a><!-- End tab nav item -->
+            </a>
 
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-lunch">
               <h4>Lunch</h4>
             </a>
-          </li><!-- End tab nav item -->
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-dinner">
               <h4>Dinner</h4>
             </a>
-          </li><!-- End tab nav item -->
+          </li>End tab nav item -->
 
         </ul>
 
@@ -320,7 +325,7 @@
 
             <div class="tab-header text-center">
               <p>Menu</p>
-              <h3>Starters</h3>
+              <h3>Dinner Menu</h3>
             </div>
 
             <div class="row gy-5">
@@ -392,15 +397,15 @@
                 <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p>
-                <p class="price">
-                  $9.95
-                </p>
+                <!-- <p class="price"> -->
+                  <!-- $9.95 -->
+                <!-- </p> -->
               </div><!-- Menu Item -->
 
             </div>
           </div><!-- End Starter Menu Content -->
 
-          <div class="tab-pane fade" id="menu-breakfast">
+          <div class="tab-pane fade" id="menu-desserts">
 
             <div class="tab-header text-center">
               <p>Menu</p>
@@ -1004,11 +1009,10 @@
               </form>
               <p id="message"></p>
             </div>
-            <script src="js/app.js" type="module"></script>
           </div>
 
           <div class="col-lg-6 d-flex align-items-center reservation-form-bg" data-aos="fade-up" data-aos-delay="200">
-            <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form">
+            <form class="php-email-form" id="guestBookForm">
               <div class="row gy-4">
                 <div class="col-lg-4 col-md-6">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
@@ -1206,7 +1210,8 @@
 
             <div class="col-md-12 text-center">
               <div class="loading">Loading</div>
-              <div class="error-message"></div>
+              <!-- <div class="error-message"></div> -->
+              <div class="err-message"></div>
               <div class="sent-message">Your message has been sent. Thank you!</div>
 
               <button type="submit">Send Message</button>
@@ -1299,6 +1304,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="js/formActions.js" type="module"></script>
 
 </body>
 
