--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Amatic+SC:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,26 +39,6 @@
           <li><a href="/#hero">Home<br></a></li>
           <li><a href="/#about">About</a></li>
           <li><a href="/#menu">Menu</a></li>
-          <!-- <li><a href="#events">Events</a></li> -->
-          <!-- <li><a href="#chefs">Chefs</a></li> -->
-          <!-- <li><a href="#gallery">Gallery</a></li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li> -->
           <li><a href="/#contact">Contact</a></li>
           <li><a href="/users/bookings_page" class="active">My Bookings</a></li>
         </ul>
@@ -74,21 +54,89 @@
   <main class="main">
     <section id="login" class="section">
       <div class="container">
+        <div class="row gy-4">
+          <h2>Manage Bookings</h2>
+          <p>Welcome to the bookings management page!</p>
 
-        <h2>Manage Bookings</h2>
-        <p>Welcome to the bookings management page!</p>
+          <h4>My Bookings</h4>
+          <ul>
+            <% bookings.forEach((booking, i)=> { console.log(booking) %>
+              <li>
+                <%= i+1 %> - <%= booking.BOOKING_NAME %>
+              </li>
+              <% }); %>
+          </ul>
 
-        <ul>
-          <% bookings.forEach((booking, i)=> { %>
-            <li>
-              <%= i+1 %> - <%= booking.BOOKING_NAME %>
-            </li>
-            <% }); %>
-        </ul>
+          <div class="row gy-4">
+            <p>Create A New Booking Here.</p>
+          </div>
 
+        </div>
       </div>
     </section>
   </main>
+
+  <footer id="footer" class="footer">
+
+    <div class="container">
+      <div class="row gy-3">
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-geo-alt icon"></i>
+          <div class="address">
+            <h4>Address</h4>
+            <p>Lot 1023 Mukim Kandang, Jalan Bukit Lintang, </p>
+            <p>75460 Ayer Molek, Melaka</p>
+            <p></p>
+          </div>
+
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-telephone icon"></i>
+          <div>
+            <h4>Contact</h4>
+            <p>
+              <strong>Phone:</strong> <span>017-324 4866</span><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-clock icon"></i>
+          <div>
+            <h4>Opening Hours</h4>
+            <p>
+              <strong>Monday-Sunday:</strong> <span>6PM - 2AM</span><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <h4>Follow Us</h4>
+          <div class="social-links d-flex">
+            <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
+            <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+            <a href="https://www.instagram.com/seripadi_decabin/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bi bi-whatsapp"></i></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container copyright text-center mt-4">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Yummy</strong> <span>All Rights Reserved</span></p>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+
+  </footer>
+
   <script src="js/bookings_page.js"></script>
 </body>
 
