--- a/views/index.ejs
+++ b/views/index.ejs
@@ -167,7 +167,7 @@
 
     </section><!-- /About Section -->
 
-    <!-- Why Us Section -->
+    <!-- Why Us Section 
     <section id="why-us" class="why-us section">
 
       <div class="container">
@@ -187,7 +187,7 @@
                 <a href="#" class="more-btn"><span>Learn More</span> <i class="bi bi-chevron-right"></i></a>
               </div>
             </div>
-          </div><!-- End Why Box -->
+          </div>
 
           <div class="col-lg-8 d-flex align-items-stretch">
             <div class="row gy-4" data-aos="fade-up" data-aos-delay="200">
@@ -198,7 +198,7 @@
                   <h4>Corporis voluptates officia eiusmod</h4>
                   <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div>
 
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
@@ -206,7 +206,7 @@
                   <h4>Ullamco laboris ladore lore pan</h4>
                   <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div>
 
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
@@ -214,7 +214,7 @@
                   <h4>Labore consequatur incidid dolore</h4>
                   <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div>
 
             </div>
           </div>
@@ -223,22 +223,9 @@
 
       </div>
 
-    </section><!-- /Why Us Section -->
+    </section> /Why Us Section -->
 
-    <section id="why-us" class="why-us section">
-
-      <div class="container">
-
-        <div id="tableList" class="row gy-4">
-
-
-        </div>
-
-      </div>
-
-    </section>
-
-    <!-- Stats Section -->
+    <!-- Stats Section 
     <section id="stats" class="stats section">
 
       <img src="assets/img/stats-bg.jpg" alt="" data-aos="fade-in">
@@ -252,28 +239,28 @@
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
               <p>Clients</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div><!-- End Stats Item 
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div><!-- End Stats Item 
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hours Of Support</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div><!-- End Stats Item 
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
               <p>Workers</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div><!-- End Stats Item 
 
         </div>
 
