--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -99,6 +99,33 @@
               <!-- Users section content -->
               <h3>Users</h3>
               <p>List of registered users and management options.</p>
+
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Login ID</th>
+                    <th scope="col">Tel. No.</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% usersList.forEach((user, index) => { %>
+                  <tr>
+                    <td><%= index + 1 %></td>
+                    <td><%= user.NAME %></td>
+                    <td><%= user.USERNAME %></td>
+                    <td><%= user.TEL_NO %></td>
+                    <td><%= user.EMAIL %></td>
+                    <td><%= user.ROLE %></td>
+                  </tr>
+                  <% }); %>
+                </tbody>
+              </table>
+
             </div>
             <div id="bookings" class="section-content">
               <!-- Bookings section content -->
@@ -148,6 +175,30 @@
               <!-- Messages section content -->
               <h3>Messages</h3>
               <p>View and manage customer messages.</p>
+
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Subject</th>
+                    <th scope="col">Content</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% msgList.forEach((msg, index) => { %>
+                  <tr>
+                    <td><%= index + 1 %></td>
+                    <td><%= msg.NAME %></td>
+                    <td><%= msg.USERNAME %></td>
+                    <td><%= msg.EMAIL %></td>
+                    <td><%= msg.SUBJECT %></td>
+                    <td><%= msg.CONTENT %></td>
+                  </tr>
+                  <% }); %>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
