--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -47,7 +47,7 @@
       <!-- <a class="btn-getstarted" href="index.html#book-a-table">Book a Table</a> -->
       <div>
         <span class="mx-4">Welcome, <%= user.NAME %>!</span>
-        <button class="book-a-table-login" id="logoutButton">Logout</button>
+        <button class="btn-getstarted" id="logoutButton">Logout</button>
       </div>
     </div>
   </header>
