--- a/views/index.ejs
+++ b/views/index.ejs
@@ -973,8 +973,9 @@
 
             </div>
             <% } else { %>
+
             <div class="login-container">
-              <h2>Login</h2>
+              <h4 class="my-4">Login</h4>
               <form id="loginForm">
                 <div class="col-lg-6 form-group">
                   <label class="mb-2" for="username">Username:</label>
@@ -992,53 +993,74 @@
               <p id="message"></p>
             </div>
             <% } %>
-
-
-
           </div>
-
-          <div class="col-lg-6 d-flex align-items-center reservation-form-bg" data-aos="fade-up" data-aos-delay="200">
-            <form class="php-email-form" id="guestBookForm">
+          <div class="col-lg-6 d-flex flex-column align-items-center reservation-form-bg" data-aos="fade-up" data-aos-delay="200">
+            <div class="row gy-4">
+              <nav class="navmenu">
+                <ul class="nav flex-row justify-content-center align-items-center">
+                  <li class="nav-item">
+                    <a id="new_booking_nav" class="nav-link-x active" href="#new_booking">New Booking</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link-x" href="#view_booking">View Guest Booking</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div id="new_booking" class="section-content">
               <div class="row gy-4">
-
                 <div class="col-lg-12 col-md-12">
                   <% if (typeof user !=='undefined' && user) { %>
                   <% } else { %>
-                  <p>Book a table as a guest now, and seamlessly link your reservation to your email when you <a href="/users/register_page"> register an account with us. </a></p>
+                  <p class="mx-4">Book a table as a guest now, and seamlessly link your reservation to your email when you <a href="/users/register_page"> register an account with us. </a></p>
                   <% }  %>
                 </div>
               </div>
-              <div class="row gy-4">
-                <div class="col-lg-4 col-md-6">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+              <form class="php-email-form" id="guestBookForm">
+                <div class="row gy-4">
+                  <div class="col-lg-4 col-md-6">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="">
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" required="">
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <input type="number" class="form-control" name="people" id="people" placeholder="# of people" required="">
+                  </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="">
+                <div class="form-group mt-3">
+                  <textarea class="form-control" name="remarks" rows="5" id="remarks" placeholder="Message"></textarea>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                  <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" required="">
+                <div class="mb-3">
+                  <div id="booking_loading" class="loading">Loading</div>
+                  <div id="booking_err" class="error-message"></div>
+                  <div id="booking_sent" class="sent-message">Your booking request was sent. We will call back or send an Email to confirm
+                    your reservation. Thank you!</div>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                  <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
+                <div class="text-center"><button type="submit">Book a Table</button></div>
+              </form>
+            </div>
+            <div id="view_booking" class="section-content">
+              <div class="row d-flex flex-column justify-content-center">
+                <div class="col-lg-12 col-md-12 d-flex flex-column justify-content-center">
+                  <p class="align-self-center mt-2">View guest booking</p>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                  <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
+                <div class="col-lg-12 col-md-12 d-flex flex-column justify-content-center">
+                  <input type="text" name="name" class="form-control my-4" id="name" placeholder="Booking ID" required="">
                 </div>
-                <div class="col-lg-4 col-md-6">
-                  <input type="number" class="form-control" name="people" id="people" placeholder="# of people" required="">
-                </div>
+                <div class="text-center"><button class="book-a-table-login ">View Booking</button></div>
               </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="remarks" rows="5" id="remarks" placeholder="Message"></textarea>
-              </div>
-              <div class="mb-3">
-                <div id="booking_loading" class="loading">Loading</div>
-                <div id="booking_err" class="error-message"></div>
-                <div id="booking_sent" class="sent-message">Your booking request was sent. We will call back or send an Email to confirm
-                  your reservation. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Book a Table</button></div>
-            </form>
+            </div>
+
           </div><!-- End Reservation Form -->
 
         </div>
@@ -1277,6 +1299,38 @@
         console.log('guest mode')
       }
 
+      const navLinks = document.querySelectorAll('.nav-link-x');
+      const sectionContents = document.querySelectorAll('.section-content');
+
+      function showSection(sectionId) {
+        sectionContents.forEach(content => {
+          if (content.id === sectionId) {
+            content.style.display = 'block';
+          } else {
+            content.style.display = 'none';
+          }
+        });
+      }
+
+      navLinks.forEach(link => {
+        link.addEventListener('click', function(event) {
+          event.preventDefault(); // Prevent default link behavior
+
+          // Get the href attribute to determine which section to show
+          const sectionId = this.getAttribute('href').substring(1); // Remove the #
+
+          navLinks.forEach(navLink => {
+            navLink.classList.remove('active');
+          });
+
+          link.classList.add('active');
+
+          // Show the corresponding section
+          showSection(sectionId);
+        });
+      });
+
+      showSection('new_booking');
     });
   </script>
 
